Use more efficient Integer#valueOf() method.